...

            HStack {
                Button(action: {
                    setRunning(true)
                    server.apply(configuration, running: true, retry: true)
                }) {
                    Text("Start")
                    .font(.headline)
                    .padding()
                    .cornerRadius(10)
                }
                .disabled(server.isRunning)
                Button(action: {
                    setRunning(false)
                    server.apply(configuration, running: false)
                }) {
                    Text("Stop")
                    .font(.headline)
                    .padding()
                    .cornerRadius(10)
                }
                .disabled(!server.isRunning && !desiredRunning)
            }
...
